--- a/project9_cohort4-master/project9_cohort4.client/src/index.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PetPath HTML</title>
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <script defer src="assets/js/main.js"></script>
   <link href="assets/css/style.css" rel="stylesheet">
