--- a/project9_cohort4-master/project9_cohort4.client/src/index.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/index.html
@@ -10,6 +10,8 @@
   <title>PetPath HTML</title>
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
   <script defer src="assets/js/main.js"></script>
   <link href="assets/css/style.css" rel="stylesheet">
